# Firmware-Teensy-4.1

./: .gitignore  CLAUDE.md  README.md  deploy.bat  installed.json  platform.txt
KMBox Net Translator/: ARCHITECTURE.md  Cargo.toml  README.md  config.example.json  serial_debug.py
KMBox Net Translator/backend/: Cargo.toml  README.md  build.rs  config.example.json
KMBox Net Translator/backend/examples/: checklist_walk.rs  enc_live_roundtrip.rs  log_burst.rs
KMBox Net Translator/backend/src/: lib.rs  main.rs
KMBox Net Translator/backend/src/http/: state.rs
KMBox Net Translator/backend/src/kmbox_net/: mod.rs  parser.rs
KMBox Net Translator/backend/src/util/: daemon.rs  log_rotation.rs  mod.rs  settings.rs
KMBox Net Translator/electron/: main.js  package.json  preload.js
KMBox Net Translator/electron/assets/: splash.html
KMBox Net Translator/electron/services/: backend-process.js  bug-report.js  health-check.js  http-port.js  logger.js  splash.js  window-prefs.js  window.js
KMBox Net Translator/frontend/: package.json
KMBox Net Translator/frontend/app/: globals.css  layout.tsx  page.tsx
KMBox Net Translator/frontend/components/: AppHeader.tsx  BugReportButton.tsx  ConnectionStatus.tsx
KMBox Net Translator/frontend/lib/api/: client.ts
KMBox Net Translator/src/: format.rs  heartbeat.rs  main.rs  reader.rs  writer.rs
KMBox Net Translator/src/kmbox_net/: mod.rs  parser.rs  schema.rs
KMBox Net Translator/src/streamcheats/: device_settings.rs  heartbeat.rs  mod.rs  packet.rs  reader.rs  writer.rs
KMBox Net Translator/src/util/: mod.rs  settings.rs  translator.rs
KMBox Net Translator/tests/: OVERNIGHT_TEST_RESULTS.md  README.md
(+100 files in other folders)
