[package]
name = "kmbox_net_translator"
version = "0.1.0"
edition = "2021"
description = "Translates KMBox Net UDP commands into Sunshine binary serial packets for the Teensy USB Host Proxy firmware."

[[bin]]
name = "kmbox_net_translator"
path = "src/main.rs"

[dependencies]
# serial2 (instead of serialport-rs) — properly uses overlapped IO on
# Windows and exposes separate read/write timeouts. The old serialport
# crate's write() called WriteFile with a NULL lpOverlapped on a handle
# opened with FILE_FLAG_OVERLAPPED, which caused 500-630ms cold-path
# write latencies on FTDI/CH340 hardware.
serial2 = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
byteorder = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
